example/celery/src/spaceone/work/error/template.py
from spaceone.core.error import *


